# NeuroScanAI

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt  start-servers.bat  test_api.py  test_model_load.py
app/: main.py  model_loader.py  predict.py
app/static/: index.html
app/static/assets/: index-CWE4NUPI.css  index-CoVChdrr.js
backend/: Dockerfile
backend/app/: model_loader.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/public/: api-test.html
frontend/src/: index.css  simple-test.ts  test-api.ts  test-service.ts
frontend/src/components/: Footer.tsx  Hero.tsx  HistorySection.tsx  Navbar.tsx  ResultCard.tsx  ThemeToggle.tsx  UploadSection.tsx
frontend/src/pages/: About.tsx  Index.tsx
frontend/src/services/: api.ts
frontend/src/types/: prediction.ts
frontend/src/utils/: history.ts  theme.ts
ml/model/: tumor_class_indices.json
ml/tools/: try_load_and_convert.py
scripts/: deploy.bat  deploy.sh  start-dev.py
tests/: test_api_detailed.py  test_model.py
